# Rav4Agent

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  UV_TESTING_GUIDE.md  deploy-and-test.sh  run-real-env-tests.sh  test.bat  test.sh  test_large_pdf.py
.github/workflows/: tests.yml
backend/: README.md  main.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  startup.py
backend/app/: config.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  chat.py  documents.py  frontend.py  health.py  models.py  tasks.py
backend/app/core/llm/: __init__.py  base.py  batched_embedding.py  ollama.py
backend/app/core/vector_store/: __init__.py  base.py  chroma.py  simple.py
backend/app/models/: schemas.py
backend/app/services/: __init__.py  chat_service.py  document_service.py  indexing_service.py  large_document_processor.py  model_service.py
backend/app/utils/: helpers.py  security.py
backend/tests/: README.md  conftest.py
backend/tests/integration/: test_large_document.py  test_real_environment.py
backend/tests/unit/: test_document_parsing.py  test_node_vectorization.py  test_prompt_generation.py  test_vector_retrieval.py  test_vector_storage.py
deployment/: DEPLOYMENT.md  deploy.sh  deployment.yaml
frontend/: index.html
